ui can create and list credentials
