# data/openapi-spec.yaml
@@ -1,3 +1,4 @@
+---
 openapi: 3.1.0
 info:
   title: Platform API
@@ -23,16 +24,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Connection"
-                title: >-
-                  Response List Connections Projects  Project Id  Connections
-                  Get
+                  "$ref": "#/components/schemas/Connection"
+                title: Response List Connections Projects  Project Id  Connections  Get
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     post:
       summary: Create Connection
       operationId: create_connection_projects__project_id__connections__post
@@ -49,25 +48,24 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ConnectionCreate"
+              "$ref": "#/components/schemas/ConnectionCreate"
       responses:
         "200":
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Connection"
+                "$ref": "#/components/schemas/Connection"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}/connections/{connection_id}":
     delete:
       summary: Delete Connection
-      operationId: >-
-        delete_connection_projects__project_id__connections__connection_id__delete
+      operationId: delete_connection_projects__project_id__connections__connection_id__delete
       parameters:
         - name: project_id
           in: path
@@ -89,14 +87,150 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Connection"
+                "$ref": "#/components/schemas/Connection"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /packages:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/credentials/":
+    get:
+      summary: List Credentials
+      operationId: list_credentials_credentials__get
+      parameters:
+        - name: skip
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+            title: Skip
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 100
+            title: Limit
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/Credential"
+                title: Response List Credentials Credentials  Get
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+    post:
+      summary: Create Credential
+      operationId: create_credential_credentials__post
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/CredentialCreate"
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Credential"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/credentials/{credential_id}":
+    get:
+      summary: Get Credential
+      operationId: get_credential_credentials__credential_id__get
+      parameters:
+        - name: credential_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid4
+            title: Credential Id
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Credential"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+    patch:
+      summary: Update Credential
+      operationId: update_credential_credentials__credential_id__patch
+      parameters:
+        - name: credential_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid4
+            title: Credential Id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/CredentialUpdate"
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Credential"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+    delete:
+      summary: Delete Credential
+      operationId: delete_credential_credentials__credential_id__delete
+      parameters:
+        - name: credential_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid4
+            title: Credential Id
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Credential"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/packages":
     get:
       summary: List All Packages
       operationId: list_all_packages_packages_get
@@ -123,14 +257,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Package"
+                  "$ref": "#/components/schemas/Package"
                 title: Response List All Packages Packages Get
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     post:
       summary: Create Global Package
       operationId: create_global_package_packages_post
@@ -139,20 +273,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/PackageCreate"
+              "$ref": "#/components/schemas/PackageCreate"
       responses:
         "200":
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}/packages/":
     get:
       tags:
@@ -195,16 +329,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Package"
-                title: >-
-                  Response List Project Packages Projects  Project Id  Packages
-                  Get
+                  "$ref": "#/components/schemas/Package"
+                title: Response List Project Packages Projects  Project Id  Packages  Get
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     post:
       tags:
         - project
@@ -226,20 +358,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/PackageCreate"
+              "$ref": "#/components/schemas/PackageCreate"
       responses:
         "200":
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}/packages/{package_id}":
     get:
       tags:
@@ -272,13 +404,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     patch:
       tags:
         - project
@@ -309,27 +441,26 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/PackageUpdate"
+              "$ref": "#/components/schemas/PackageUpdate"
       responses:
         "200":
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     delete:
       tags:
         - project
         - packages
       summary: Delete Project Package
-      operationId: >-
-        delete_project_package_projects__project_id__packages__package_id__delete
+      operationId: delete_project_package_projects__project_id__packages__package_id__delete
       parameters:
         - name: project_id
           in: path
@@ -355,21 +486,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}/packages/{package_id}/deploy":
     post:
       tags:
         - project
         - packages
       summary: Deploy Project Package
-      operationId: >-
-        deploy_project_package_projects__project_id__packages__package_id__deploy_post
+      operationId: deploy_project_package_projects__project_id__packages__package_id__deploy_post
       parameters:
         - name: project_id
           in: path
@@ -402,21 +532,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}/packages/{package_id}/destroy":
     delete:
       tags:
         - project
         - packages
       summary: Destroy Project Package
-      operationId: >-
-        destroy_project_package_projects__project_id__packages__package_id__destroy_delete
+      operationId: destroy_project_package_projects__project_id__packages__package_id__destroy_delete
       parameters:
         - name: project_id
           in: path
@@ -442,14 +571,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Package"
+                "$ref": "#/components/schemas/Package"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /projects/:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/projects/":
     get:
       summary: List Projects
       operationId: list_projects_projects__get
@@ -476,14 +605,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Project"
+                  "$ref": "#/components/schemas/Project"
                 title: Response List Projects Projects  Get
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     post:
       summary: Create Project
       operationId: create_project_projects__post
@@ -492,7 +621,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ProjectCreate"
+              "$ref": "#/components/schemas/ProjectCreate"
       responses:
         "200":
           description: Successful Response
@@ -504,7 +633,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/projects/{project_id}":
     patch:
       summary: Update Project
@@ -522,20 +651,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ProjectUpdate"
+              "$ref": "#/components/schemas/ProjectUpdate"
       responses:
         "200":
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Project"
+                "$ref": "#/components/schemas/Project"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
     delete:
       summary: Delete Project
       operationId: delete_project_projects__project_id__delete
@@ -553,13 +682,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Project"
+                "$ref": "#/components/schemas/Project"
         "422":
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/":
+    get:
+      summary: Root
+      operationId: root__get
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
 components:
   schemas:
     Connection:
@@ -623,11 +762,65 @@ components:
         - target_handle
         - project_id
       title: ConnectionCreate
+    Credential:
+      properties:
+        credential_type:
+          "$ref": "#/components/schemas/CredentialType"
+        id:
+          type: string
+          format: uuid4
+          title: Id
+        organization_id:
+          type: string
+          format: uuid4
+          title: Organization Id
+      type: object
+      required:
+        - credential_type
+        - id
+        - organization_id
+      title: Credential
+    CredentialCreate:
+      properties:
+        credential_type:
+          "$ref": "#/components/schemas/CredentialType"
+        organization_id:
+          type: string
+          format: uuid4
+          title: Organization Id
+        credential_value:
+          type: string
+          title: Credential Value
+      type: object
+      required:
+        - credential_type
+        - organization_id
+        - credential_value
+      title: CredentialCreate
+    CredentialType:
+      type: string
+      enum:
+        - SERVICE_ACCOUNT_KEY
+        - SECRET
+      title: CredentialType
+    CredentialUpdate:
+      properties:
+        credential_type:
+          anyOf:
+            - "$ref": "#/components/schemas/CredentialType"
+            - type: "null"
+        credential_value:
+          anyOf:
+            - type: string
+            - type: "null"
+          title: Credential Value
+      type: object
+      title: CredentialUpdate
     HTTPValidationError:
       properties:
         detail:
           items:
-            $ref: "#/components/schemas/ValidationError"
+            "$ref": "#/components/schemas/ValidationError"
           type: array
           title: Detail
       type: object
@@ -721,10 +914,6 @@ components:
         name:
           type: string
           title: Name
-        is_user_default:
-          type: boolean
-          title: Is User Default
-          default: false
         id:
           type: string
           format: uuid4
@@ -744,10 +933,6 @@ components:
         name:
           type: string
           title: Name
-        is_user_default:
-          type: boolean
-          title: Is User Default
-          default: false
         organization_id:
           anyOf:
             - type: string
